--- a/index.html
+++ b/index.html
@@ -3,10 +3,14 @@
        <link rel="stylesheet" href="styles.css"/> 
     </head>
     <body>
-        <div>
-            <img src="Screen Shot 2020-08-13 at 7.06.35 PM copy.png"/>
-            <h3>Ricky Martinez</h3>
-            <p>Front End Developer</p>
-            <h4>New Jersey</h4>
+        <div class="card">
+            <div>
+                <img src="Screen Shot 2020-08-13 at 7.06.35 PM copy.png" alt="Ricky smiling" class="main-img"/>
+            </div>
+            <div>
+                <h3>Ricky Martinez</h3>
+                <p>Front End Developer</p>
+                <h4>New Jersey</h4>
+            </div>
         </div>
     </body>
